# GSAFSolver

./: CMakeLists.txt  README.md
setafsolver/: CMakeLists.txt
setafsolver/header/: solver.hpp
setafsolver/header/datamodel/: Argument.hpp  Clause.hpp  Heuristics.hpp  Instance.hpp  Misc.hpp  Semantics.hpp
setafsolver/header/parsing/: Parser.hpp
setafsolver/header/tools/: Helper.hpp  IDTrie.hpp
setafsolver/src/: main.cpp  solver.cpp
setafsolver/src/datamodel/: Argument.cpp  Clause.cpp  Heuristics.cpp  Instance.cpp  Semantics.cpp
setafsolver/src/parsing/: ParserSimpleFormat.cpp
setafsolver/src/tools/: Helper.cpp  IDTrie.cpp
